# multipart-downloader

./: Cargo.toml  build.rs
examples/: download_file.rs
multipart-downloader-app/: package.json  pnpm-lock.yaml  tailwind.config.js
multipart-downloader-app/src/: main.tsx
multipart-downloader-app/src-tauri/: Cargo.toml  tauri.conf.json
multipart-downloader-app/src-tauri/capabilities/: default.json
multipart-downloader-app/src-tauri/src/: commands.rs  lib.rs  main.rs
multipart-downloader-app/src/assets/components/: ActionBar.tsx  DownloadsTable.tsx  ListActions.tsx  StartDownloadModal.tsx
multipart-downloader-app/src/assets/components/Extended/: PSCheckbox.tsx  PSInput.tsx  PSListBox.tsx  PSRadio.tsx  PSSelect.tsx
multipart-downloader-app/src/assets/components/settings/: AboutSettings.tsx  NetworkSettingsComponent.tsx  SettingsModal.tsx  StorageSettings.tsx
multipart-downloader-app/src/assets/components/settings/networking/: NetworkSettingsComponent.tsx  ProxyList.tsx  SplitPartCountSlider.tsx
multipart-downloader-app/src/assets/components/settings/networking/proxy-list/: NewProxyInput.tsx  ProxyList.tsx  ProxyListItem.tsx  ProxySettingsComponent.tsx  ProxyTypeSelector.tsx
multipart-downloader-app/src/assets/components/settings/storage/: DownloadDirectoryInput.tsx  StorageSettingsComponent.tsx
multipart-downloader-app/src/assets/components/variants/: PSAutocomplete.tsx  PSButton.tsx  PSDropdown.tsx  PSInput.tsx  PSSelect.tsx  PSSwitch.tsx  PSTooltip.tsx
multipart-downloader-app/src/assets/pages/: Home.tsx
multipart-downloader-app/src/assets/providers/: DownloadManagerContext.tsx  SettingsModalProvider.tsx  StartDownloadProvider.tsx
multipart-downloader-app/src/assets/scss/: index.scss
multipart-downloader-app/src/assets/ts/: Math.ts  download.ts  settings.ts
multipart-downloader-cli/: Cargo.toml
multipart-downloader-cli/src/: arguments.rs  main.rs
multipart-downloader-lib/: Cargo.toml
multipart-downloader-lib/src/: download_client.rs  lib.rs  log_stub.rs  macros.rs
