[package]
name = "multipart-downloader-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12" }
anyhow = "1.0.95"
log = { version = "0.4.22", optional = true }

[features]
macros = []
log = ["dep:log"]


[[example]]
name = "download_file"
path = "../examples/download_file.rs"