[package]
name = "multipart-downloader-lib"
version = "0.0.1"
edition = "2021"
build = "../build.rs"
authors = ["Drew Chase"]
repository = "https://github.com/drew-chase/multipart-downloader"
autoexamples = true

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["stream"] }
anyhow = "1.0.95"
log = { version = "0.4.22", optional = true }
futures-util = "0.3.31"
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }

[features]
macros = []
log = ["dep:log"]


[[example]]
name = "download_file"
path = "../examples/download_file.rs"